--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
 <header>jQuery PHP Ajax</header>
 <div>
-<label>Val 1</label><br>
-<input type="text" id="val1" size="4"/>
-<label>Val 2</label><br>
-<input type="text" id="val2" size="4"/>
+		<label>Val 1</label>
+		<br>
+		<input type="text" id="val1" size="4"/>
+		<label>Val 2</label>
+		<br>
+		<input type="text" id="val2" size="4"/>
 </div>
-<div>
-<a class="run">Sum</a>
-</div>
+<div> <a class="run">Sum</a> </div>
 </body>
 </html>
